test/files/neg/t7494-no-options/sample_2.scala
// scalac: -Xplugin:. -Xshow-phases -P:ploogin:inploog

package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
